Use Map.ofEntries for EXT_TO_FILETYPE
Available since Java 9, the Map.ofEntries provides more memory efficient for Map.

Signed-off-by: Arthit Suriyawongkul <arthit@gmail.com>